--- a/src/pages/Cashback.css
+++ b/src/pages/Cashback.css
@@ -4,12 +4,23 @@ body {
 
 header {
     background-color: #2b3f40;
-    
+
 }
 .points-container {
     background-color: #fefbea;
 
 }
+
+.voucherGrid {
+    width: 100%;
+  }
+  
+.pageContainer {
+    width: 100%;
+    padding: 32px;
+    box-sizing: border-box;
+  }
+
 
 .text-points {
 
