--- a/src/components/LoginInput/LoginInput.css
+++ b/src/components/LoginInput/LoginInput.css
@@ -23,7 +23,9 @@ form > label {
     padding: 10px;
 
 }
-
+.login-form > h1 {
+    color: #183B1D;
+}
 .login-form input[type="text"],
 .login-form input[type="password"] {
   width: 100%;        
