--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,7 +1,7 @@
 
 .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
