--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -57,9 +57,12 @@ form > label {
   cursor: pointer;
   font-size: 16px;
 }
+.success {
+    color: green;
+    margin-top: 10px;
+}
 
 .error {
-    color: 'red';
-    margin-bottom: '10px';
     color: red;
+    margin-top: 10px;
 }
