feat: use redux to store user details on login

--- a/src/pages/Cashback/Cashback.css
+++ b/src/pages/Cashback/Cashback.css
@@ -1,6 +1,6 @@
 /* dark green panel on top */
 
-body {
+.body-container {
     display: flex;
     flex-direction: column;
     background-color: #e1eddf;  
