--- a/src/components/Cashback/CashbackHeader.css
+++ b/src/components/Cashback/CashbackHeader.css
@@ -7,4 +7,27 @@
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: fit-content;
+    height: 100%;
+    padding: 0 20px;
+}
+
+.action-button {
+    background-color: #e1eddf;
+    font-weight: bold;
+    color: #183B1D;
+    padding: 10px;
+    margin: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
 }
