--- a/src/pages/Cashback/Cashback.css
+++ b/src/pages/Cashback/Cashback.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     background-color: #e1eddf;  
+    height: 100vh;
     width: 100%;
     margin-top: 120px;
 
@@ -21,7 +22,7 @@
     padding: 20px;
 }
 
-img {
+.voucher-img {
     display: block;
     width: 12%;
     height: auto;
