--- a/src/components/VoucherPopup/VoucherPopup.module.css
+++ b/src/components/VoucherPopup/VoucherPopup.module.css
@@ -15,7 +15,8 @@
     background-color: #c6e2b2;
     padding: 24px;
     border-radius: 12px;
-    width: 400px;
+    width: 600px;
+    height: 450px;
     position: relative;
     text-align: center;
   }
