fix: cashback page and popup styling

--- a/src/components/Cashback/CashbackHeader.css
+++ b/src/components/Cashback/CashbackHeader.css
@@ -25,7 +25,7 @@
     font-weight: bold;
     color: #183B1D;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 5px 10px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
