--- a/src/components/Voucher/Voucher.module.css
+++ b/src/components/Voucher/Voucher.module.css
@@ -1,6 +1,6 @@
 .ticket {
     margin: 12px; 
-    width: 400px; 
+    /* width: 450px;  */
     height: auto;
     background-color: #fdfae7;
     border-radius: 12px;
