--- a/src/pages/Cashback/Cashback.css
+++ b/src/pages/Cashback/Cashback.css
@@ -16,7 +16,7 @@
     justify-content: baseline;
     background-color: #fefbea;
     box-shadow: 0px 8px 4px 0px rgba(0, 0, 0, 0.25);
-    margin: 20px 25px;
+    margin: 40px 25px 20px 25px;
     padding: 20px;
     border-radius: 12px;
 }
@@ -69,15 +69,12 @@ h1 {
     margin-bottom: 0;
 }
   
-.pageContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+ .pageContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr)); 
+    gap: 20px;
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
-    margin: 0; 
+    margin: 0;
 }
-
-
