--- a/src/components/Cashback/CashbackHeader.css
+++ b/src/components/Cashback/CashbackHeader.css
@@ -1,33 +1,41 @@
 .header-container {
-    background-color: #2b3f40;
-    width: 100%;
-    height: 90px;
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
+  background-color: #2b3f40;
+  width: 100%;
+  height: 90px;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: fit-content;
-    height: 100%;
-    padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: fit-content;
+  height: 100%;
+  padding: 0 20px;
 }
 
 .action-button {
-    background-color: #e1eddf;
-    font-weight: bold;
-    color: #183B1D;
-    padding: 10px;
-    margin: 10px 5px 10px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
+  background-color: #e1eddf;
+  font-weight: bold;
+  color: #183b1d;
+  padding: 10px;
+  margin: 10px 5px 10px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.header-logo {
+  height: 80%;
+  width: auto;
+  margin: 0 20px;
+  object-fit: contain;
+  padding: 5px;
 }
