--- a/src/components/LoginInput/LoginInput.css
+++ b/src/components/LoginInput/LoginInput.css
@@ -1,45 +1,53 @@
-
-
 .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fefbe9;
-    width: 394px;
-    height: 364px;
-    border-radius: 20px;
-    margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fefbe9;
+  width: 90%;
+  max-width: 400px;
+  min-width: 300px;
+  height: 400px;
+  border-radius: 20px;
+  margin: auto;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 600px) {
+  .login-form {
+    margin: 10px auto;
+    margin-bottom: 150px;
+  }
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 form > label {
-    padding: 10px;
-
+  padding: 10px;
 }
 .login-form > h1 {
-    color: #183B1D;
+  color: #183b1d;
 }
 .login-form input[type="text"],
 .login-form input[type="password"] {
-  width: 100%;        
+  width: 100%;
   padding: 10px;
   font-size: 16px;
   margin: 5px 0;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   border: 1px solid #ccc;
-  background-color: #E1EEDD ;
+  background-color: #e1eedd;
   border-radius: 5px;
 }
 
 .login-form input[type="submit"] {
-  background-color: #183B1D;
+  background-color: #183b1d;
   color: white;
   padding: 10px;
   margin: 5px;
